[package]
name = "libape"
version = "0.1.0"
edition = "2024"
description = "ANSI/POSIX Environment Library for Glenda Microkernel"
build = "build.rs"

[lib]
name = "ape"
crate-type = ["staticlib", "rlib"]

[dependencies]
libglenda-rs = { path = "../libglenda-rs", features = ["rt-service"] }

[build-dependencies]
chrono = "0.4"
